syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService {
  rpc GetArtist(ArtistRequest) returns (ArtistResponse);
  rpc GetAllArtist(AllArtistRequest) returns (AllArtistResponse);
  rpc AddArtist(AddArtistRequest) returns (ArtistResponse);
  rpc UpdateArtist(UpdateArtistRequest) returns (ArtistResponse);
  rpc GetArtistByIds(ArtistIdsRequest) returns (AllArtistByIdsResponse);
}

message ArtistRequest {
  bytes id = 1;
}

message ArtistResponse {
  bytes id = 1;
  string name = 2;
  string biography = 3;
  bytes photo = 4;
}

message AllArtistRequest {
  string name = 1;
  int32 page = 2;
  int32 size = 3;
}

message AllArtistResponse {
  repeated ArtistResponse artists = 1;
  int32 total_count = 2;
}

message AddArtistRequest {
  string name = 1;
  string biography = 2;
  bytes photo = 3;
}

message UpdateArtistRequest {
  bytes id = 1;
  AddArtistRequest artistData = 2;
}


message ArtistIdsRequest {
  repeated bytes id = 1;
}

message AllArtistByIdsResponse {
  repeated ArtistResponse artist = 1;
}
